Some additional adjustments

--- a/Documents/Educación/Coursera/Data Science Specialization/Activity Monitory Analysis/PA1_template.Rmd
+++ b/Documents/Educación/Coursera/Data Science Specialization/Activity Monitory Analysis/PA1_template.Rmd
@@ -1,9 +1,3 @@
----
-output: 
-  html_document: 
-    keep_md: yes
----
-
 # Activity monitoring analysis
 author: "Varenka Rico"
 date: "2023-11-01"
@@ -69,7 +63,7 @@ ggplot(data = df_5min_periods, aes(x=date, y=num_periods)) +
   labs(title = "Total 5-minute periods per day")
 ```
 
-## Steps by day
+### Steps by day
 
 To determine the total number of steps taken each day, it is necessary to sum the steps in each 5-minute period for each day first.
 
@@ -102,7 +96,7 @@ median_steps <- median(df_by_day$steps, na.rm = TRUE)
 The **mean** number of steps was `r mean_steps` steps.  
 The **median** number of steps was `r median_steps` steps.
 
-## Review of the 5-minute interval information
+### 5-minute interval information
 ```{r df_avg_by_day, results = 'hide'}
 df_avg_by_day <- aggregate(raw_data$steps, by = list(ymd(raw_data$date)), FUN = mean)
 df_avg_by_day <- setNames(df_avg_by_day, c("date", "mean_steps"))
@@ -129,7 +123,7 @@ ggplot(data = df_avg_by_interval, aes(x=interval, y=mean_steps)) +
   labs(title = "Mean steps by the 5-minute intervals")
 ```
 
-### Filling NA's with average interval steps
+#### Filling NA's with average interval steps
 NA's values will be filled with the average of each 5-minute interval will be added in order to avoid impacting the overall average registered.
 
 ```{r fill_NA}
